[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/loading.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/monogram-extended.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -3.0
margin_top = 15.0
margin_right = 588.0
margin_bottom = 796.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Loading..."
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Tween" type="Tween" parent="Label"]
repeat = true
playback/repeat = true

[node name="loadingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="tween_completed" from="Label/Tween" to="." method="_on_Tween_bounce_completed"]
[connection signal="timeout" from="loadingTimer" to="." method="_on_loadingTimer_timeout"]
